# test-deployment

./: .gitignore  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: create_release_pr.yml  deploy.yml  tests.yml
cdk/: package-lock.json
stacks/: MyStack.ts
